<resources>
    <string name="app_name">My Stash Diary</string>


    <!-- Texto cuadro diálogo borrar elemento-->
    <string name="delete_element">Delete element </string>
    <string name="delete_message">Are you sure you want to delete this element? </string>

    <!-- Texto Crear elemento y buscar -->
    <string name="menu_search">Search </string>
    <string name="element_name">Name: </string>
    <string name="element_creator">Creator: </string>

    <string name="element_save_button">Save </string>
    <string name="create_new_element">Create New Element </string>

    <!-- Texto category -->
    <string name="element_category">Category: </string>
    <string name="element_category_select">Select</string>

    <string name="category_book">Book</string>
    <string name="category_movie">Movie</string>
    <string name="category_series">Series</string>
    <string name="category_anime">Anime</string>

    <!-- Texto state -->
    <string name="element_state">State: </string>
    <string name="element_state_select">Select</string>

    <string name="state_all">All</string>
    <string name="state_consuming">Consuming</string>
    <string name="state_planning">Planning</string>
    <string name="state_completed">Completed</string>

</resources>